2003-02-04  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix bug in pixbuf_get_alpha(), speed up pixbuf_new_cleared(),
	be more paranoid in ComponentTransfer
	
2003-02-04  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented the ComponentTransfer filter, it works properly now
	
2003-02-03  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.[ch]: Start implementing ComponentTransfer filter
	Indent, make code ansi-compliant.
	* rsvg-css.[ch]: Tweak VBOX parsing, free unused string array properly


2003-02-03  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented ColorMatrix filter, Made GaussianBlur scaled according to the current coordinate system
	* rsvg-css.c: Added \n to the types of whitespace that splits arguments in list
	
2003-02-02  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented Merge filter, implemented Offset filter

2003-02-01  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented ConvolveMatrix filter
	
2003-02-01  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-syles.c: implemented filter groups using the same code as the opacity grops
	* rsvg-private.h: added a current filter pointer for loading primitives in context
	* rsvg-defs.c: added new def type: filter
	* rsvg.c: allowed filters and filter primitives to be specified in file, also added the ability for a group to use a filter if neccisary
	* rsvg-shapes.c: added the ability for a shape to use a filter if it needs to
	* rsvg-text.c: added the ability for text to use a filter if it needs to
	* rsvg-filter.c: added new file
	* rsvg-filter.h: added new file
	
2004-01-29  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug #132569

2004-01-15  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.c:
	* test-rsvg.c: Fix bug #131644
	
2004-01-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Fix bug #124075
	
2004-01-06  Dom Lachowicz <cinamod@hotmail.com>

	* Makefile.am: Fix bug #130687
	