@@ -87,6 +87,10 @@ void
 rsvg_start_filter_primitive_component_transfer_function (RsvgHandle * ctx,
 														 const xmlChar ** atts, char channel);
 
+void
+rsvg_start_filter_primitive_erode (RsvgHandle * ctx,
+								   const xmlChar ** atts);
+
 G_END_DECLS
 
 #endif
